--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,8 +10,7 @@
 <body>
 <section class="section">
 <a class="button-form" href="./index.html">back to main page</a>
-</section>
-<div class="wrap">
+<wrap class="wrap">
 <form class="feedback-form" autocomplete="off">
     <label>
         Email
@@ -23,7 +22,8 @@
     </label>
     <button class="button-submit" type="submit">Submit</button>
 </form>
-        </div>
+        </wrap>
+    </section>
     <script type="module" src="./js/2-form.js"></script>
 </body>
 </html>
