--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,7 +10,7 @@
 <body>
 <section class="section">
 <a class="button-form" href="./index.html">back to main page</a>
-<wrap class="wrap">
+<div class="wrap">
 <form class="feedback-form" autocomplete="off">
     <label>
         Email
@@ -22,7 +22,7 @@
     </label>
     <button class="button-submit" type="submit">Submit</button>
 </form>
-        </wrap>
+    </div>
     </section>
     <script type="module" src="./js/2-form.js"></script>
 </body>
